# Ejercicio-practica

./: CMakeLists.txt  README.md
1 Ejercicios propuestos/: main.cpp
1 Ejercicios propuestos/eje1/: eje1.cpp  eje1.h
1 Ejercicios propuestos/eje2/: eje2.cpp  eje2.h
1 Ejercicios propuestos/eje3/: eje3.cpp  eje3.h
1 Ejercicios propuestos/eje4/: eje4.cpp  eje4.h
1 Ejercicios propuestos/eje5/: eje5.cpp  eje5.h
1 Ejercicios propuestos/eje6/: eje6.cpp  eje6.h
1 Ejercicios propuestos/eje7/: eje7.cpp  eje7.h
1 Ejercicios propuestos/eje8/: eje8.cpp  eje8.h
1 Ejercicios propuestos/eje9/: eje9.cpp  eje9.h
