cmake_minimum_required(VERSION 3.10)

project(EjercicioPractica)

set(CMAKE_CXX_STANDARD 14)

add_executable(1
    "1_Ejercicios_propuestos/main.cpp"
    "1_Ejercicios_propuestos/eje1/eje1.cpp"
    "1_Ejercicios_propuestos/eje2/eje2.cpp"
    "1_Ejercicios_propuestos/eje3/eje3.cpp"
    "1_Ejercicios_propuestos/eje4/eje4.cpp"
    "1_Ejercicios_propuestos/eje5/eje5.cpp"
    "1_Ejercicios_propuestos/eje6/eje6.cpp"
    "1_Ejercicios_propuestos/eje7/eje7.cpp"
    "1_Ejercicios_propuestos/eje8/eje8.cpp"
    "1_Ejercicios_propuestos/eje9/eje9.cpp"
)
